packages/tools/localDev/kind/ingress-gen3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: revproxy-dev
spec:
  tls:
  - secretName: localhost-gen3
  rules:
  - host: "localhost"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: revproxy-service
              port:
                number: 80
