packages/tools/localDev/kind/ingress-kind.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-controller
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  tls:
  - hosts:
    - localhost
    secretName: gen3-local-tls
  rules:
  - host: "localhost"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: revproxy-service
              port:
                number: 80
