packages/tools/localDev/kind/ingress-local-dev.yaml
#
# Version to support development with iframes which add https://localhost:3010
# to the Content-Security-Policy for iframes
# before this is uses you will need to:
#
#   kubectl edit configmap ingress-nginx-controller -n ingress-nginx
#   add:
#     apiVersion: v1
#     data:
#       allow-snippet-annotations: "true"
#
#   write the config and exit: It will reload and allow snippets used below.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-controller
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Content-Security-Policy: frame-ancestors self https://localhost https://localhost:3010";
spec:
  tls:
  - hosts:
    - localhost
    secretName: gen3-local-tls
  rules:
  - host: "localhost"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: revproxy-service
              port:
                number: 80
